[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-ping"                 # strongly recommend NOT "ping"
version = "0.1.0"
description = "Simple cross-platform ping helpers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frank Barrett" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["ping*"]

[project.scripts]
ping-cli = "ping.core:main_cli"
